# 6725-spring-2026

./: .gitignore  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  render_slides.sh  requirements.txt  week01.html  week02.html  week03.html  week04.html  week06.html  week07.html  week08.html  week09.html  week10.html  week11.html  week12.html  week13.html
docs/: index.md  schedule.md  syllabus-internal.md  syllabus.md
docs/assets/html/: week1.html  week10.html  week2.html  week4.html  week5.html  week6.html  week7.html  week8.html
docs/lectures/: week1.md  week10.md  week11.md  week12.md  week2.md  week3.md  week4.md  week5.md  week6.md  week7.md  week8.md  week9.md
docs/lectures/slides/: custom.scss  week-01-introduction.qmd  week-02-icl-and-coding-assistants.qmd  week-02-icl.qmd  week-03-rag.qmd  week-04-mcp.qmd  week-05-agents-part1.qmd  week-06-agents-part2.qmd  week-07-observability.qmd  week-08-guardrails-evaluation.qmd  week-10-embeddings.qmd  week-11-optimization.qmd  week-13-platforms.qmd  week1.qmd  week10.qmd  week3.qmd  week4.qmd  week7.qmd  week8.qmd
docs/stylesheets/: extra.css
scripts/: canvas_api.py  test_canvas.py
