[project]
name = "dsan_6725"
version = "0.1.0"
description = "DSAN 6725 course repo"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "click>=8.1.8",
    "mergedeep>=1.3.4",
    "mkdocs>=1.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-material>=9.5.50",
    "mkdocs-revealjs>=0.0.6",
    "pyyaml>=6.0.2",
    "pyyaml-env-tag>=0.1",
    "quarto>=0.1.0",
]
